2016-03-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct conditional compilation block nesting errors.

	* include/stdio.h include/time.h (_BEGIN_C_DECLS, _END_C_DECLS): Keep
	them balanced within, and around, conditional compilation blocks.

2016-03-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Feature test _MINGW32_EXTENDED_SOURCE renamed.

	* include/_mingw.h (_MINGW32_EXTENDED_SOURCE): Rename to...
	(_MINGW32_SOURCE_EXTENDED): ...this, to improve naming consistency...
	(_XOPEN_SOURCE_EXTENDED): ...with this POSIX-XSI feature test.
	(__USE_MINGW_ANSI_STDIO): Note that it is intended for internal use;
	users should enable any conventional feature test which implies it.

	* include/time.h (_MINGW32_EXTENDED_SOURCE): Update references...
	(_MINGW32_SOURCE_EXTENDED): ...i.e. to refer to this.

2016-02-28  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct atexit() and _onexit() export declaration regression.

	* msvcrt-xref/msvcrt.def.in (atexit, _onexit): These must be exported
	as DATA; declare them accordingly.

2016-02-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Refactor to make <parts/time.h> and <parts/wchar.h> redundant.

	* include/string.h: Tidy layout.
	(__STRING_H_SOURCED__): New macro; define it at start; delete at end.
	(_stricmp, _strnicmp): Include their prototypes, selectively from...
	* include/strings.h [__STRING_H_SOURCED__]: ...here, reproduce them...
	* include/parts/strings.h: ...from here; file is obsolete; delete it.

	* include/string.h (_wcscmpi): Define alias.
	(wcscat, wcschr, wcscmp, wcscoll, wcscpy, wcscspn, wcslen, wcsncat)
	(wcsncmp, wcsncpy, wcspbrk, wcsrchr, wcsspn, wcsstr, wcstok, wcsxfrm)
	(_wcsdup, _wcsicmp, _wcsicoll, _wcslwr, _wcsnicmp, _wcsnset, _wcsrev)
	(_wcsset, _wcsupr, _wcsncoll, _wcsnicoll, _wcserror, __wcserror)
	(wcscmpi, wcscmpi, wcsdup, wcsicmp, wcsicoll, wcslwr, wcsnicmp)
	(wcsnset, wcsrev, wcsset, wcsupr): Selectively include prototypes...